refactor: migrate to kotlin-dsl / update pebble